--- a/templates/partials/shared/roles.hbs
+++ b/templates/partials/shared/roles.hbs
@@ -1,1 +1,11 @@
-{{jsonPrint this}}
+<h1>Roles for this round are...</h1>
+
+{{#each this}}
+	<div class="row">{{this}}</div>
+{{/each}}
+
+{{!-- {{#if decider}} --}}
+	<div class="form row hidden-el" id="decider">
+    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+	</div>
+{{!-- {{/if}} --}}
