Abandoned merge to fork. Added game roles to player object, added "game:next" handler and method for advancing screen through defined static array. Cleaned up SASS. Resolved game config model issues.

--- a/templates/partials/shared/pot.hbs
+++ b/templates/partials/shared/pot.hbs
@@ -1,5 +1,5 @@
 <section class="col-lg-6 col-sm-6">
-  <div id="game_code" class="row room-container">
+  <div class="row room-container">
 		
 		<div class="row">
 		  As the Decider, {{decider}} begins with {{config.deciderStartCoinCount}} coins.
@@ -21,5 +21,9 @@
 		  The pot could grow if you play boldly...
 	  </div>
   
+	</div>
+
+	<div class="form row" id="decider">
+    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 </section>
