--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -140,71 +140,6 @@
   background: #fff;
   padding: 10px 10px 10px 20px; }
 
-.form-prompt {
-  color: white;
-  background-color: #ff5e41;
-  font-size: x-large;
-  padding: 10px; }
-  .form-prompt.white {
-    color: black;
-    background-color: white; }
-
-.post-button {
-  color: white;
-  background-color: #00c5c2;
-  font-size: large;
-  width: 100%;
-  border: 0; }
-
-.toggle-button {
-  color: white;
-  font-size: medium;
-  width: 100%;
-  min-height: 50px;
-  border: 0;
-  -webkit-transition: background-color 0.3s linear;
-  -moz-transition: background-color 0.3s linear;
-  -ms-transition: background-color 0.3s linear;
-  -o-transition: background-color 0.3s linear;
-  transition: background-color 0.3s linear; }
-  .toggle-button:hover {
-    -webkit-filter: brightness(115%);
-    -moz-filter: brightness(115%);
-    -ms-filter: brightness(115%);
-    -o-filter: brightness(115%);
-    filter: brightness(115%); }
-  .toggle-button.color-1 {
-    background-color: #ff5e41; }
-  .toggle-button.color-2 {
-    background-color: #ffaf34; }
-  .toggle-button.color-3 {
-    background-color: #2bd3ee; }
-  .toggle-button.color-4 {
-    background-color: #13e695; }
-  .toggle-button.color-5 {
-    background-color: #ff7f7d; }
-  .toggle-button.color-6 {
-    background-color: #7c90ff; }
-  .toggle-button.color-7 {
-    background-color: #36d5d9; }
-  .toggle-button .inactive {
-    background-color: black; }
-
-.entry-footer {
-  position: fixed;
-  bottom: 0;
-  right: 0;
-  background-color: white; }
-
-body .player-form {
-  padding: 3%; }
-
-#wrapper.group {
-  width: 1680px !important;
-  max-width: none !important;
-  margin-right: auto;
-  margin-left: auto; }
-
 .submission button {
   color: white;
   background-color: #FD6D59;
@@ -236,54 +171,8 @@ body .player-form {
   .room-container h1 {
     font-size: 6em; }
 
-.player-background {
-  display: block;
-  position: relative;
-  margin: 20px auto;
-  margin-bottom: 40px;
-  background: white; }
-  .player-background .icon {
-    margin: 10px auto;
-    display: block;
-    position: relative;
-    width: 100%;
-    opacity: 0.3; }
-    .player-background .icon.active {
-      opacity: 1; }
-  .player-background .points {
-    display: none;
-    float: left;
-    width: 100%;
-    position: absolute;
-    padding-top: 26%;
-    font-size: 3.6em; }
-  .player-background .score {
-    font-size: 4.6em;
-    font-weight: bold;
-    color: #91c92f;
-    text-shadow: -1px -1px 0 #FFF,   1px -1px 0 #FFF, -1px 1px 0 #FFF, 1px 1px 0 #FFF; }
-  .player-background .nameplate {
-    position: relative;
-    background-color: white;
-    padding: 2px;
-    opacity: 0;
-    font-weight: bold;
-    font-size: medium;
-    -moz-transition: opacity 0.5s, transform 0.5s;
-    -o-transition: opacity 0.5s, transform 0.5s;
-    -webkit-transition: opacity 0.5s, transform 0.5s;
-    transition: opacity 0.5s, transform 0.5s; }
-    .player-background .nameplate.active {
-      opacity: 1;
-      -moz-transform: translate(0px, -32px);
-      -o-transform: translate(0px, -32px);
-      -ms-transform: translate(0px, -32px);
-      -webkit-transform: translate(0px, -32px);
-      transform: translate(0px, -32px); }
-
-.last .text {
-  font-size: 26em;
-  top: 58% !important; }
+#decider {
+  display: none; }
 
 #coming-soon {
   margin-top: 6%;
@@ -320,129 +209,6 @@ body .player-form {
   box-shadow: 6px 7px 10px #C7C6C6; }
   .coming-soon-info h1 {
     font-size: 30px; }
-
-@-webkit-keyframes coming-soon {
-  0% {
-    left: 8px; }
-  10% {
-    left: -8px; }
-  30% {
-    left: 8px; }
-  60% {
-    left: -8px; }
-  100% {
-    left: 0px; } }
-
-@-moz-keyframes coming-soon {
-  0% {
-    left: 8px; }
-  10% {
-    left: -8px; }
-  30% {
-    left: 8px; }
-  60% {
-    left: -8px; }
-  100% {
-    left: 0px; } }
-
-@-o-keyframes coming-soon {
-  0% {
-    left: 8px; }
-  10% {
-    left: -8px; }
-  30% {
-    left: 8px; }
-  60% {
-    left: -8px; }
-  100% {
-    left: 0px; } }
-
-@keyframes coming-soon {
-  0% {
-    left: 8px; }
-  10% {
-    left: -8px; }
-  30% {
-    left: 8px; }
-  60% {
-    left: -8px; }
-  100% {
-    left: 0px; } }
-
-#home-page {
-  margin-top: 6%;
-  font-size: x-large; }
-
-#home-page-banner {
-  color: white;
-  background-color: #ff9971;
-  padding: 2%; }
-  #home-page-banner #intro {
-    padding-left: 10%;
-    padding-right: 10%;
-    font-size: 1.6em; }
-
-#mailing-list {
-  color: white;
-  background-color: #ff9971;
-  padding: 2%;
-  margin-top: 2%;
-  font-family: "Avenir";
-  font-weight: bolder;
-  font-size: xx-large; }
-  #mailing-list .email {
-    color: #58c5c1; }
-  #mailing-list span a {
-    color: white; }
-    #mailing-list span a:hover {
-      text-decoration: underline; }
-  #mailing-list span:hover {
-    border-bottom: none; }
-
-.home-page-info {
-  font-size: large;
-  color: #ff9971;
-  background-color: white;
-  padding: 3%;
-  margin-top: 2%;
-  margin-left: 2%;
-  -webkit-box-shadow: 6px 7px 10px #C7C6C6;
-  -moz-box-shadow: 6px 7px 10px #C7C6C6;
-  box-shadow: 6px 7px 10px #C7C6C6;
-  -webkit-transition: -webkit-filter 0.5s linear;
-  -moz-transition: -webkit-filter 0.5s linear;
-  -ms-transition: -webkit-filter 0.5s linear;
-  -o-transition: -webkit-filter 0.5s linear;
-  transition: -webkit-filter 0.5s linear; }
-  .home-page-info.coming-soon:hover {
-    -webkit-filter: saturate(20%);
-    -moz-filter: saturate(20%);
-    -ms-filter: saturate(20%);
-    -o-filter: saturate(20%);
-    filter: saturate(20%); }
-  .home-page-info.coming-soon h1#coming-soon {
-    font-size: 2.3em;
-    color: #58c5c1; }
-  .home-page-info.coming-soon.invalid {
-    -webkit-animation: coming-soon .5s 1;
-    -moz-animation: coming-soon .5s 1;
-    -o-animation: coming-soon .5s 1;
-    animation: coming-soon .5s 1; }
-  .home-page-info.current {
-    -webkit-transition: transform 0.1s linear;
-    -moz-transition: transform 0.1s linear;
-    -ms-transition: transform 0.1s linear;
-    -o-transition: transform 0.1s linear;
-    transition: transform 0.1s linear; }
-    .home-page-info.current h1 {
-      font-size: 2.3em;
-      color: #58c5c1; }
-    .home-page-info.current:hover {
-      -moz-transform: scale(1.1);
-      -o-transform: scale(1.1);
-      -ms-transform: scale(1.1);
-      -webkit-transform: scale(1.1);
-      transform: scale(1.1); }
 
 @media (min-width: 1024px) {
   body .container {
@@ -536,9 +302,6 @@ html, body {
   transition: background 0.5s linear;
   background-color: #fdae8f; }
 
-.body.player.wikigeeks {
-  background-image: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/wiki/background_tileable.png); }
-
 .body.monitor {
   background: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/raindrops_tileable.png), #ffaf34;
   background-size: 35%; }
@@ -625,56 +388,6 @@ footer {
   @media (max-width: 480px) {
     .footer {
       display: none; } }
-
-.orange-font {
-  color: #ffa76d; }
-
-.green-font {
-  color: #00CB86; }
-
-.red-font {
-  color: #fe6444; }
-
-.bright-red-font {
-  color: #F83439; }
-
-.teal-font {
-  color: #36d5d9; }
-
-.tweetImg {
-  height: 300px;
-  width: 100%;
-  top: -100px;
-  position: relative; }
-
-.clockImg {
-  height: 150px;
-  width: 150px;
-  bottom: -50px;
-  position: relative;
-  width: 150px;
-  height: 150px;
-  background: white;
-  -webkit-border-radius: 75px;
-  -moz-border-radius: 75px;
-  border-radius: 75px; }
-
-.game {
-  height: 100%;
-  width: 100%;
-  position: relative;
-  margin: 10px auto;
-  background-color: white;
-  box-shadow: 10px 10px 10px #888888;
-  min-height: 200px; }
-
-.game-header {
-  text-align: center;
-  font-size: 4em;
-  font-weight: bold;
-  letter-spacing: -0.06em; }
-  .game-header span {
-    margin: -5px; }
 
 #debugging {
   z-index: 1000; }
