--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -3,14 +3,10 @@
 @import "_core/mixins";
 @import "_core/functions";
 @import "_core/forms";
-@import "_core/player";
-@import "_core/groupview";
+@import "_core/playerview";
 @import "_core/comingsoon";
 @import "_core/homepage";
 @import "_core/media";
-
-// Game-specific styling
-// @import "groupview";
 
 html, body {
 	max-height: 100%;
@@ -50,8 +46,6 @@ html, body {
 }
 
 .body.game-bg {
-	
-	
 
   @include linear_transition(background, 0.5s);
 
@@ -68,11 +62,6 @@ html, body {
 
   @include linear_transition(background, 0.5s);
   background-color: #fdae8f;
-
-}
-
-.body.player.wikigeeks {
-	  background-image: $background-wiki;
 
 }
 
@@ -206,63 +195,6 @@ footer {
 		display: none;
 	}
 }
-
-.orange-font {
-	color: #ffa76d;
-}
-
-.green-font {
-	color: $color-green;
-}
-
-.red-font {
-	color: $color-red;
-}
-
-.bright-red-font {
-	color: $color-bright-red;
-}
-
-.teal-font {
-	color: $color-teal;
-}
-.tweetImg {
-	height: 300px;
-	width: 100%;
-	top: -100px;
-	position: relative;
-}
-
-.clockImg {
-	height: 150px;
-	width: 150px;
-	bottom: -50px;
-	position: relative;
-	@include circle(150px, white);
-}
-
-.game {
-	height: 100%;
-	width: 100%;
-  position: relative;
-  margin: 10px auto;
-  background-color: white;
-  box-shadow: 10px 10px 10px #888888;
-  min-height: 200px;
-}
-
-.game-header {
-	text-align: center;
-	font-size: 4em;
-	font-weight: bold;
-	letter-spacing: -0.06em;
-
-	span {
-		margin: -5px;
-	}
-}
-
-
 
 // START Main Content
 #debugging {
