--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -100,6 +100,8 @@ var socketEvents = function(eventId, eventData) {
 
             $('#gameContent').html(eventData);
 
+            if(isDecider)
+                $('#decider').show();
             break;
 
         case 'game:ending':
