Added debug option to open 8 player screens at once as "emulated view"; some template fixes.

--- a/templates/partials/script/global.hbs
+++ b/templates/partials/script/global.hbs
@@ -72,18 +72,6 @@
   	sfxPath = '/sfx/'
   {{/ifeq}}
 
-	ion.sound({
-    sounds: [
-        {
-            name: "button_tiny"
-        }
-    ],
-    volume: 0.5,
-    path: sfxPath,
-    preload: true,
-    ready_callback: function(obj) { console.log('sounds ready', obj); }
-	});
-
   // All possible socket event IDs
   // TODO: Change based on game type
 	var eventIds = [
@@ -156,7 +144,7 @@
 
 	}
 
-	{{#ifnoteq section 'group/monitor'}}
+	{{#ifnoteq section 'decider/game'}}
 
 		// Load animations
 		{{> script/player_animation}}
@@ -164,7 +152,27 @@
 	{{/ifnoteq}}
 
 	$(document).ready(function() {
+
+			var isEmulated = window.frameElement && window.frameElement.getAttribute('data-emulated');
+
+			if(!isEmulated) {
 			
+				ion.sound({
+			    sounds: [
+			        {
+			            name: "button_tiny"
+			        }
+			    ],
+			    volume: 0.5,
+			    path: sfxPath,
+			    preload: true,
+			    ready_callback: function(obj) { console.log('sounds ready', obj); }
+				});
+
+			}
+			else
+				$('#debugging').remove();
+					
       $('.body').addClass('login');
 			$('.navbar.main').hide();
 
@@ -362,7 +370,7 @@
 				});
 
 				// Check if this client is logged in on server
-				checkIfLoggedIn();
+				// checkIfLoggedIn();
 
 				// Load events for players
 				{{> script/player_events gameType=gameType}}
@@ -507,6 +515,15 @@
 				$(btn).data('resume', 'false');
 			}
 
+		});
+		$("#generate_players").click(function() {
+
+			$("#generate_players").text('loading...');
+
+			$('#login').remove();
+			$('#emulate-players').fadeIn();
+			
+			$('#emulate-players iframe').attr('src', 'http://localhost:3000/play/debug');
 		});
 
 });
