--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -24,10 +24,6 @@
     </head>
     
     <body class="body {{gameType}}">
-          {{#ifeq section "group/monitor"}}
-                {{> group/header}}
-            {{/ifeq}}
-
         {{#ifeq section "comingsoon"}}
             {{> nav_comingsoon}}
             <div class="col-sm-12">
@@ -47,6 +43,7 @@
             </div>
 
             {{#ifeq debug true}}
+              {{#ifeq section 'decider/game'}}
                 <div id="error-box">
                 </div>
                 
@@ -56,51 +53,36 @@
                     <div id="debug-info">
                     </div>
 
-                    {{#ifeq section 'group/monitor'}}
-                        
-                        <button id="template_reload" class="submit">reload</button>
-                        <select id="template_selector" name="template_selector_player">
-                          <option value="">choose:</option>
-
-                          {{#ifeq gameType "htyi"}}
-                              <option value="partials/group/htyi/tweet" data-key="tweet" data-event_id="game:start">tweet</option>
-                              <option value="partials/group/htyi/voting" data-key="" data-event_id="hashtags:received">voting</option>
-                              <option value="partials/group/htyi/results" data-key="submissions" data-event_id="hashtags:results">results</option>
-                          {{/ifeq}}
-
-                          {{#ifeq gameType "wikigeeks"}}
-                              <option value="partials/group/wiki/topic" data-key="tweet" data-event_id="game:start">topic</option>
-                              <option value="partials/group/wiki/article" data-key="" data-event_id="hashtags:received">article</option>
-                              <option value="partials/group/wiki/results" data-key="submissions" data-event_id="wiki:results">results</option>
-                          {{/ifeq}}
-
-                        </select>
-
-                    {{else}}
-                        
-                        <button id="template_reload" class="submit">reload</button>
-                        <select id="template_selector" name="template_selector_player">
-                          <option value="">choose:</option>
-
-                          {{!-- {{#ifeq gameType "wikigeeks"}} --}}
-                              <option value="partials/player/wiki/results" data-key="submissions" data-event_id="wiki:results">wiki-results</option>
-                          {{!-- {{/ifeq}} --}}
-
-                        </select>
-
-                    {{/ifeq}}
                       <br /><button id="countdowns_pause" data-resume="false" class="submit">pause countdowns</button>
                       <br /><button id="goto_results" data-event="game:force_results" class="submit"{{!--  style="display:none" --}}>show results</button>
 
                     <div id="slider-gsap">
                     </div>
                 </div>
+              {{else}}
+                <div id="debugging" class="form" style="position: fixed;top: 0;">
+                  <button id="generate_players">generate players</button>
+                </div>
+              {{/ifeq}}
             {{/ifeq}}
 
                   <div class="container-fluid" id="gameContent">
 
                     <!-- BODY CONTENT START -->
                     {{{body}}}
+
+                    {{#ifeq debug true}}
+                      <div id="emulate-players" style="display:none">
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                        <iframe src="" data-emulated='true' width="400" height="400"></iframe>
+                      </div>
+                    {{/ifeq}}
 
                   </div>
             </div><!-- /.container -->
