Added partials for question and agenda, a few bug fixes, improved GetData method, fixes to Roles model.

--- a/templates/partials/player/agenda.hbs
+++ b/templates/partials/player/agenda.hbs
@@ -3,7 +3,12 @@
   
   	<h3>{{name}} the {{title}}</h3>
 
-  	{{{bio.html}}}
+  	<h4>Agenda</h4>
+
+  	<ul>
+  		<li>{{agendaItems.[0]}}</li>
+  		<li>{{agendaItems.[1]}}</li>
+  	</ul>
 
 	</div>
 	<div class="form row" id="decider">
