Load web SDK's core script/docs in base layout, removed unneeded middleware.

--- a/templates/layouts/base.hbs
+++ b/templates/layouts/base.hbs
@@ -9,7 +9,6 @@
         <meta name="description" content="A suite of digital multiplayer games that teaches students how to critique and create civic media.">
         <meta name="author" content="Engagement Lab">
         
-
         {{#ifeq section 'play'}}
             {{!-- Mobile Meta --}}
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,6 +17,9 @@
 
         {{!-- Open Graph --}}
         {{!-- <meta property="og:image" content="http://res.cloudinary.com/engagement-lab-home/image/upload/v1455896685/site/about/logo_color.png" /> --}}
+
+        {{!-- Load web SDK's core script/docs --}}
+        {{> core environment=env}}
 
         {{!-- Load our CSS/docs --}}
         {{> css environment=env section=section}}
