--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,7 +1,7 @@
 <div class="row gameLanding" id="homepage">
     
   <div class="row" id="home-page-banner">
-      <div id="intro">{{{content.intro.html}}}</div>
+      <div id="intro">{{{content.introText.html}}}</div>
   </div>
 
 </div>
