testing new jsonPrint this

--- a/templates/views/game/player.hbs
+++ b/templates/views/game/player.hbs
@@ -1,5 +1,7 @@
 <div id="login" class="col-sm-12">
 
+{{{jsonPrint this}}}
+
   <div class="form">
     <input type="text" id="access_code" placeholder="room code"> <br />
     <input type="text" id="player_name" placeholder="name"> <br />
@@ -16,6 +18,8 @@
 
   <div class="col-sm-3"></div>
   <div class="row col-sm-9" id="players">
+
+
 
   </div>
   <div class="col-sm-3"></div>
