--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -69,14 +69,13 @@
   .form .button_text {
     min-width: 100px;
     min-height: 60px;
-    font-size: 3em;
-    background-color: #ff9971; }
+    font-size: 3em; }
   .form .invalid {
     -webkit-animation: invalid-field .5s 1;
     -moz-animation: invalid-field .5s 1;
     -o-animation: invalid-field .5s 1;
     animation: invalid-field .5s 1;
-    box-shadow: 0 0 5px 1px #ab3724; }
+    box-shadow: 0 0 5px 1px red; }
   .form div {
     margin-left: auto;
     margin-right: auto; }
@@ -119,7 +118,7 @@
   .form .error {
     display: none;
     color: white;
-    background-color: #ab3724;
+    background-color: red;
     font-size: medium;
     min-height: 50px;
     padding: 10px;
@@ -142,14 +141,14 @@
 
 .submission button {
   color: white;
-  background-color: #FD6D59;
+  background-color: orange;
   -webkit-transition: background-color 0.3s linear;
   -moz-transition: background-color 0.3s linear;
   -ms-transition: background-color 0.3s linear;
   -o-transition: background-color 0.3s linear;
   transition: background-color 0.3s linear; }
   .submission button.inactive {
-    background-color: #674B47; }
+    background-color: orange; }
 
 .submission #access-code {
   font-size: 4em; }
@@ -173,42 +172,6 @@
 
 #decider {
   display: none; }
-
-#coming-soon {
-  margin-top: 6%;
-  font-size: x-large; }
-
-#coming-soon-banner {
-  color: white;
-  background-color: #ff9971;
-  padding: 2%; }
-  #coming-soon-banner #intro {
-    padding-left: 10%;
-    padding-right: 10%; }
-  #coming-soon-banner #mailing-list {
-    font-family: "Avenir";
-    font-weight: bolder;
-    font-size: xx-large;
-    border-bottom: solid 2px #ffddb0; }
-    #coming-soon-banner #mailing-list a {
-      color: white; }
-      #coming-soon-banner #mailing-list a:hover {
-        text-decoration: none; }
-    #coming-soon-banner #mailing-list:hover {
-      border-bottom: none; }
-
-.coming-soon-info {
-  font-size: large;
-  color: #ff9971;
-  background-color: white;
-  padding: 3%;
-  margin-top: 2%;
-  margin-left: 2%;
-  -webkit-box-shadow: 6px 7px 10px #C7C6C6;
-  -moz-box-shadow: 6px 7px 10px #C7C6C6;
-  box-shadow: 6px 7px 10px #C7C6C6; }
-  .coming-soon-info h1 {
-    font-size: 30px; }
 
 @media (min-width: 1024px) {
   body .container {
@@ -252,11 +215,7 @@
   body .player-background .nameplate {
     font-size: xx-large; }
   body .game-header {
-    font-size: 6em; }
-  .players.left div.player-background:nth-child(4) {
-    transform: translate(290px, -281px); }
-  .players.right div.player-background:nth-child(4) {
-    transform: translate(-290px, -281px); } }
+    font-size: 6em; } }
 
 html, body {
   max-height: 100%; }
@@ -277,7 +236,7 @@ html, body {
 
 .body {
   font-family: "Avenir";
-  background: white;
+  background: #fff;
   color: black; }
   @media (max-width: 480px) {
     .body {
@@ -289,10 +248,6 @@ html, body {
   -ms-transition: background 0.5s linear;
   -o-transition: background 0.5s linear;
   transition: background 0.5s linear; }
-  .body.game-bg.htyi {
-    background: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/raindrops_tileable.png), #ff9971; }
-  .body.game-bg.wikigeeks {
-    background-image: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/wiki/background_tileable.png); }
 
 .body.login {
   -webkit-transition: background 0.5s linear;
@@ -300,11 +255,7 @@ html, body {
   -ms-transition: background 0.5s linear;
   -o-transition: background 0.5s linear;
   transition: background 0.5s linear;
-  background-color: #fdae8f; }
-
-.body.monitor {
-  background: url(https://res.cloudinary.com/engagement-lab-home/image/upload/v1/emerging-citizens/images/layout/htyi/raindrops_tileable.png), #ffaf34;
-  background-size: 35%; }
+  background-color: #00BBB5; }
 
 .modal {
   display: none;
