--- a/templates/views/decider/index.hbs
+++ b/templates/views/decider/index.hbs
@@ -5,8 +5,9 @@
             <div class="col-sm-3"></div>
             <div class="submission col-sm-6 input-box">
                 <div class="form">
-{{!--                     <div class="form-prompt white">enter username:</div>
-                    <input type="text" id="player-name" placeholder="name"> <br /> --}}
+                    <div class="form-prompt white">enter username:</div>
+                    <input type="text" id="player-name" placeholder="name"> <br />
+
                     <div class="form-prompt white">select the deck to use:</div>
                     <div id="categories">
                         {{#each decks}}
@@ -24,9 +25,20 @@
         </div>
     </div>
 
-    <div id="waiting" class="row" style="display:none">
+    <div class="row" id="waiting" style="display:none">
+        <h1 id="game-code">{{gameCode}}</h1>
+        <h2>You are the decider</h2>
+        <h3>Waiting for players</h3>
 
-        {{> decider/game gameCode=gameCode}}
 
+        <div class="col-sm-3"></div>
+        <div class="row col-sm-9" id="players">
+
+        </div>
+        <div class="col-sm-3"></div>
+
+        <div class="form row {{!-- hidden-el --}}" id="start">
+        <input id="btn-start-game" data-event="game:start" class="post-button submit" type="submit" name="submit" value="start">
+        </div>
     </div>
 </div>
