Updated global script, player_logic to most recent versions from emerging citizens codebase.

--- a/templates/partials/script/development.hbs
+++ b/templates/partials/script/development.hbs
@@ -38,4 +38,7 @@
 {{!-- GSAP Timeline --}}
 <script type="text/javascript" src="/plugins/gsap-timeline-slider.js"></script>
 
+{{!-- Private Mode Detection --}}
+<script type="text/javascript" src="/plugins/private-mode.js"></script>
+
 {{> script/global host=host environment=environment section=section key=key }}
