--- a/templates/partials/shared/pot.hbs
+++ b/templates/partials/shared/pot.hbs
@@ -1,5 +1,7 @@
-<section class="col-lg-6 col-sm-6">
+<section class="col-lg-6 col-sm-12 col-centered">
   <div class="row room-container">
+
+  {{{jsonPrint this}}}
 		
 		<div class="row">
 		  As the Decider, {{decider}} begins with {{config.deciderStartCoinCount}} coins.
