--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -75,7 +75,7 @@ var socketEvents = function(eventId, eventData) {
         case 'players:update':
 
             var staticPlayers = $('.player-static');
-            var currentPlayers = _.pluck(eventData, 'username');
+            var currentPlayers = _.pluck(eventData.players, 'username');
 
             {{!-- // Allow to start?
             if(currentPlayers.length === 2)
