--- a/templates/partials/script/player_events.hbs
+++ b/templates/partials/script/player_events.hbs
@@ -27,7 +27,7 @@ var getScript = function (gameType) {
         });
 }
 
-var socketEvents = function(eventId, eventData) {
+socketEvents = function(eventId, eventData) {
 
     switch (eventId) {
 
