--- a/templates/views/decider/index.hbs
+++ b/templates/views/decider/index.hbs
@@ -9,7 +9,7 @@
                     <input type="text" id="player-name" placeholder="name"> <br />
 
                     <div class="form-prompt white">select the deck to use:</div>
-                    <div id="categories">
+                    <div id="decks">
                         {{#each decks}}
                             <button value="{{id}}" class="toggle-button inactive">{{name}}</button>
                         {{/each}} 
