--- a/templates/views/decider/game.hbs
+++ b/templates/views/decider/game.hbs
@@ -1,10 +1,13 @@
 <div id="login" class="col-sm-12">
 
+<img src="http://res.cloudinary.com/engagement-lab-home/image/upload/e_grayscale/v1454520474/site/listings/odr1jt3rfkda0s1qce9q.png" height='auto' width='200px'>
+  <p style="width:20%; margin-left:40%;">Welcome to At Stake: a deliberation game! You will need 3-4 players.</p>
+
   <div class="col-sm-3"></div>
   <div class="submission col-sm-6 input-box">
       <div class="form">
           <div class="form-prompt white">enter username:</div>
-          <input type="text" id="player-name" placeholder="name"> <br />
+          <input type="text" id="player-name" placeholder="name"> <br/>
           
           <div class="error">Error!</div>
           <input id="btn_submit_username" class="button_text" type="submit" name="submit" value="Login">       
