Started on basic animations, better handling on decider login/

--- a/public/styles/core.css
+++ b/public/styles/core.css
@@ -173,6 +173,9 @@
 #decider {
   display: none; }
 
+.screen {
+  display: none; }
+
 @media (min-width: 1024px) {
   body .container {
     width: 100%; }
