--- a/templates/partials/script/player_animation.hbs
+++ b/templates/partials/script/player_animation.hbs
@@ -26,5 +26,19 @@ function playerEntry() {
 }
 
 function rulesAnim() {
+
+	var screens = $('.row.screen');
+  var screensAnim = new TimelineLite({paused: true});
+	
+  _.each(screens, function(el, index) {
+
+		// timeline.add(TweenLite.fromTo(el, animTiming[index], {scale:0}, {scale:1, ease:Elastic.easeOut}));
+
+		screensAnim.to(el, .5, {xPercent:-100, ease:Expo.easeInOut, opacity: 1, display:'block', delay: 3});
+		screensAnim.fromTo(el, .5, {xPercent:100}, {x:0, xPercent:0, ease:Expo.easeInOut, opacity:0, display:'none', delay: 3});
+
+  });
+
+  screensAnim.play();
 	
 }
