--- a/templates/partials/script/player_logic.hbs
+++ b/templates/partials/script/player_logic.hbs
@@ -200,7 +200,7 @@ $(document).on('click', '.btn.game_login', function(evt) {
     }
 
     // Create uid for player
-    var playerUID = Math.floor(Math.pow(10, 10-1) + Math.random() * (Math.pow(10, 10) - Math.pow(10, 10-1) - 1));
+    playerUID = Math.floor(Math.pow(10, 10-1) + Math.random() * (Math.pow(10, 10) - Math.pow(10, 10-1) - 1));
     sessionStorage.setItem('uUID', playerUID);
 
     // Disable button and show loading modal
