--- a/templates/partials/shared/pot.hbs
+++ b/templates/partials/shared/pot.hbs
@@ -1,25 +1,23 @@
-<section class="col-lg-6 col-sm-12 col-centered">
+<section class="col-lg-12 col-sm-12 col-centered" style="overflow:hidden">
   <div class="row room-container">
-
-  {{{jsonPrint this}}}
 		
-		<div class="row">
+		<div class="row screen col-lg-6 col-sm-12">
 		  As the Decider, {{decider}} begins with {{config.deciderStartCoinCount}} coins.
 	  </div>
 		
-		<div class="row">
+		<div class="row screen col-lg-6 col-sm-12">
 		  Everyone else begins with {{config.deciderStartCoinCount}} coins.
 	  </div>
 
-		<div class="row">
+		<div class="row screen col-lg-6 col-sm-12">
 		  At the end of the round, {{decider}} will choose a winner and they will get the coins in the pot.
 	  </div>
 		
-		<div class="row">
+		<div class="row screen col-lg-6 col-sm-12">
 		  {{config.potCoinCount}} coins are up for grabs!
 	  </div>
 
-		<div class="row">
+		<div class="row screen col-lg-6 col-sm-12">
 		  The pot could grow if you play boldly...
 	  </div>
   
