--- a/templates/partials/player/round_instructions.hbs
+++ b/templates/partials/player/round_instructions.hbs
@@ -1,17 +1,10 @@
 <section class="col-lg-6 col-sm-6">
   <div class="row room-container">
-  
-  	<h3>{{name}} the {{title}}</h3>
-
-  	<h4>Agenda</h4>
-
-  	<ul>
-  		<li>{{agendaItems.[0]}}</li>
-  		<li>{{agendaItems.[1]}}</li>
-  	</ul>
+		
+		<h3>Listen to the Decider</h3>
 
 	</div>
-	<div class="form row" id="decider">
+	<div class="form row {{!-- hidden-el --}}" id="decider">
     <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 </section>
