--- a/templates/partials/shared/roles.hbs
+++ b/templates/partials/shared/roles.hbs
@@ -6,6 +6,6 @@
 
 {{!-- {{#if decider}} --}}
 	<div class="form row" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 {{!-- {{/if}} --}}
