--- a/public/styles/core.scss
+++ b/public/styles/core.scss
@@ -38,7 +38,7 @@ html, body {
   font-family: "Avenir";
 
   background: blue;
-  color: black;
+  color: white;
 
 	@include mobile-only {
 	  background-color: #fdae8f;
