--- a/templates/partials/decider/agenda.hbs
+++ b/templates/partials/decider/agenda.hbs
@@ -1,11 +1,11 @@
 <section class="col-lg-6 col-sm-6">
-  <div id="game_code" class="row room-container">
+  <div class="row room-container">
 		<h3>"Now everyone quietly review your agenda items. You'll earn extra coins if these are included in the winning proposal. Keep them secret!"</h3>
 
 		Press next when everyone's ready
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 </section>
