--- a/templates/partials/decider/question.hbs
+++ b/templates/partials/decider/question.hbs
@@ -1,5 +1,5 @@
 <section class="col-lg-6 col-sm-6">
-  <div id="game_code" class="row room-container">
+  <div class="row room-container">
 		Round {{round}}
 
 		<h3>"Here is the question you'll answer this round. Is everyone ready to ponder a solution?"</h3>
@@ -10,6 +10,6 @@
 
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
 	</div>
 </section>
