--- a/templates/partials/decider/round_instructions.hbs
+++ b/templates/partials/decider/round_instructions.hbs
@@ -1,9 +1,10 @@
 <section class="col-lg-6 col-sm-6">
   <div class="row room-container">
-		<h3>"Everyone, please introduce your character roles. You will be playing from this perspective this round."</h3>
+		Read out loud:
 
-		Press next when everyone has introduced themselves
-
+		<h3>"You will have {{config.thinkSeconds}} seconds to think of a proposal from your character's perspective."</h3>
+ 
+		When everyone is ready, press next.
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
     <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
