--- a/templates/partials/shared/rules.hbs
+++ b/templates/partials/shared/rules.hbs
@@ -24,6 +24,6 @@
 	</div>
 
 	<div class="form row" id="decider">
-    <input id="btn-start-game" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next">
+    <input id="btn-next" data-event="game:next" class="post-button submit hidden-el" type="submit" name="submit" value="next">
 	</div>
 </section>
