Decide screen fixes and added winner screen.

--- a/templates/partials/decider/deliberate.hbs
+++ b/templates/partials/decider/deliberate.hbs
@@ -7,7 +7,7 @@
 	</div>
 	<div class="form row {{!-- hidden-el --}}" id="decider">
     <input id="btn-time" data-event="game:start_timer" class="post-button submit" type="submit" name="submit" value="start ({{config.pitchSeconds}} seconds)">
-    <input id="btn-next" data-event="game:next_player" class="post-button submit" type="submit" name="submit" value="next player" style="display:none">
+    <input id="btn-next" data-event="game:next" class="post-button submit" type="submit" name="submit" value="next" style="display:none">
     Time left: <span id="countdown"></span>
 	</div>
 </section>
