Added screens and logic for agenda rewards, re-factored CMS format for agenda items.

--- a/public/styles/_core/forms.scss
+++ b/public/styles/_core/forms.scss
@@ -59,6 +59,13 @@
 		border-radius: 50px;
 	}
 
+	&.row {
+			button {
+			min-height: 200px;
+			min-width: 200px;
+		}
+	}
+
 	input.prompt {
 		width: 100%;
 		display: inline;
