--- a/templates/partials/player/agenda_item.hbs
+++ b/templates/partials/player/agenda_item.hbs
@@ -1,15 +1,30 @@
 <section class="col-lg-6 col-sm-6">
   <div class="row room-container">
 		
-		<section id="items">
-      {{#each agendaItems}}
-	      <div class="agenda_item" {{#if isActive}}style="display:block"{{/if}}>
-					The Decider is reviewing this agenda item:<br />
-					<h3>{{this}}</h3>
-				</div>
-      {{/each}}
-		</section>
+		{{#if isActive}}
+		
+			<section id="your-items">
+	      {{#each agendaItems}}
+		      <div class="agenda_item"{{#ifeq @index ../activeIndex}} style="display:block"{{/ifeq}}>
+						The Decider is reviewing your agenda item:<br />
+						<h3>{{this}}</h3>
+					</div>
+	      {{/each}}
+			</section>
+		
+		{{else}}
 
+			<section id="their-items">
+	      {{#each agendaItems}}
+		      <div class="agenda_item"{{#ifeq @index ../activeIndex}} style="display:block"{{/ifeq}}>
+					The Decider is reviewing {{namePossessive ../activeUser}} agenda item:<br />
+						<h3>{{this}}</h3>
+					</div>
+	      {{/each}}
+			</section>
+
+		{{/if}}
+		
 		<div id="chosen">
 		</div>
 		
